<resources>
    <string name="app_name">POHA</string>
    <string name="email">Email</string>
    <string name="registrace">Registrace</string>
    <string name="userName">Uživatelské jméno</string>
    <string name="heslo">Heslo</string>
    <string name="register">Registrovat</string>
    <string name="logIn">Přihlásit se</string>
    <string name="logout">Odhlásit se</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="not_tracking_location">Poloha není sledována.</string>
    <string name="o_km">"0.00 km"</string>
    <string name="m">" m"</string>
    <string name="m_s">" m/s"</string>
    <string name="sprinter1">sprinter1</string>
    <string name="_1_03_45">1:03:45</string>
    <string name="_5_26_km">5.26 km</string>
    <string name="_0_45_s_m">0.45 s/m</string>
    <string name="forgot_password">Zapomněl/a jste heslo?</string>
    <string name="standings">1.</string>


</resources>