<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_st_standings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standings"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/tv_st_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sprinter1"
                    android:textStyle="bold"
                    android:textColor="@color/green_light"
                    android:textSize="15sp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/tv_st_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_03_45"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/tv_st_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5_26_km"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/tv_st_avg_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_45_s_m"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="30dp"
                    android:layout_gravity="center_vertical"/>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>